Replaced to use DatatypeConverter instead Base64 on unit test.